# ergo-cyti-miner

./: Cargo.toml  shell.nix
ergo-cyti-lib/: Cargo.toml
ergo-cyti-lib/src/: calculate.rs  constants.rs  lib.rs  mint.rs  tx.rs
ergo-cyti-miner/: Cargo.toml
ergo-cyti-miner/src/: main.rs
ergo-cyti-wasm/: Cargo.toml
ergo-cyti-wasm/src/: calculate.rs
