[package]
name = "ergo-cyti-miner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ergo-cyti-lib = { version = "^0.1.0", path = "../ergo-cyti-lib" }
ergotree-ir = "0.20"
ergo-lib = "0.20"
tokio = { version = "1.21", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
base16 = "0.2.1"
futures = "0.3.24"
rayon = "1.5.3"
